# deaddrop

./: Cargo.toml  Dockerfile  fly.toml
.github/workflows/: deploy.yml
scripts/: setup-server.sh
skills/deaddrop/: SKILL.md
src/: auth.rs  lib.rs  main.rs  models.rs
src/routes/: admin.rs  agent.rs  agents.rs  health.rs  messages.rs  mod.rs  register.rs  search.rs
tests/: api.rs
