[package]
name = "deaddrop"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
redis = "1.0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
axum-test = "18"
serde_json = "1"
serial_test = "3"
